# clippy

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  clippy.conf  daemon.cpp  daemon.h  lib-common.h  lib.cpp  lib.h  local.cpp  remote.cpp  simple-raw.cpp  simple-raw.h  toolchain-arm64.cmake  toolchain-armhf.cmake
Formula/: clippy.rb
packages-raspbian-buster/clippy/DEBIAN/: control.template
packages-ubuntu-hirsute/clippy/DEBIAN/: control.template
platform/freebsd/: MANIFEST_TEMPLATE  build-pkg.sh
platform/macos/: clippy.rb
platform/packages-raspbian-buster/clippy/DEBIAN/: control.template
